tests/positive/issue3048/main.juvix
module main;

import Other;

type AVLTree (A : Type) :=
  node (AVLTree A)
       (AVLTree A)
       (AVLTree A)
       (AVLTree A)
       (AVLTree A)
       (AVLTree A)
       (AVLTree A)
       (AVLTree A)
       (AVLTree A);

type Foo := mkFoo (AVLTree Foo);
