tests/negative/Internal/WrongReturnTypeParameters.juvix
module WrongReturnTypeParameters;

type A (B : Type) :=
c : A B B;

end;
